RocketShip Changelog

02-27-2015

    - Restored weak passphrases for hash and encryption (you need to set those when starting a project)
    - Added the timezone setting at the top of the generate script to silence errors

02-21-2015

    - Added Route permissions (allow: all, ip or array of ips)
    - Added forbidden method in error controller
    - Removed useless code from error controller

02-14-2015

    - Cleaned up API's HTTPResponse and JSONHTTPResponse classes
    - Created CacheAdapter interface
    - Refactored Cache adapters to respect the CacheAdapter interface
    - Refactored Session adapters (moved one level up)
    - Refactored UploadDriver to UploadAdapter and type to interface instead of Abstract

02-13-2015

    - Added Mongo driver for Upload manager
    - Added Mongo file serving (for files uploaded using the upload manager)
    - Added support for Mongo upload files in Image class
    - Added distinct Filter class
    - Added new events
    - System events are now constants within the Event class
    - Bug fixes

01-03-2015

    - Added bundleimage in HTML helper
    - Fixed bug with database update statements where the key is the _id and is not an MongoId instance

01-02-2015

    - Added possibility of custom directives
    - Added support for directives in the generator
    - Documentation!!! First in 5 years
    - API documentation updated
    - Bug fixes

31-01-2015

    - Added view directives (<!--view-->, <!--include:partial_name-->, <!--inject:js-->, <!--inject:css-->)
    - Updated documentation